--- a/src/commands/execute-and-evaluate.yml
+++ b/src/commands/execute-and-evaluate.yml
@@ -3,10 +3,6 @@ description: |
 
   Note: If parallelism is set to N > 1, the result will not be calculated correctly in most cases.
 parameters:
-  analysis-name:
-    description: Analysis name
-    type: string
-    default: "true"
   analyze:
     description: Specify analysis steps
     type: steps
@@ -17,10 +13,6 @@ parameters:
     type: steps
     default:
       - calculate
-  analysis-results-path:
-    description: Specify the path to save the analysis results if you need to change it
-    type: string
-    default: "/tmp/analysis-results"
   test-results-path:
     description: Specify the value of the path parameter in the store_test_results step if you need to change it
     type: string
@@ -34,38 +26,24 @@ parameters:
     type: string
     default: ""
 steps:
-  # steps to analyze HEAD
-  - set-result-path:
-      analysis-name: << parameters.analysis-name >>
-      analysis-results-path: << parameters.analysis-results-path >>
-  - checkout-analysis-target
-  - steps: << parameters.analyze >>
-  # steps analyze BASE
-  - set-result-path:
-      analysis-name: << parameters.analysis-name >>
-      analysis-results-path: << parameters.analysis-results-path >>
-      is-target-branch-base: true
   - checkout-analysis-target:
       is-target-branch-base: true
-      vcs-api-token: << parameters.vcs-api-token >>
+  - declare-commit-ranges:
       circle_compare_url-path: << parameters.circle_compare_url-path >>
+      vcs-api-token: << parameters.vcs-api-token >>
   - steps: << parameters.analyze >>
   # steps to calculate the difference
-  - set-analysis-result-paths:
-      analysis-results-path: << parameters.analysis-results-path >>
+  - set-analysis-result-paths
   - steps: << parameters.calculate >>
   - restore_comment-fingerprints
   - evaluate:
-      analysis-results-path: << parameters.analysis-results-path >>
-      pattern: '.*/([0-9]+-|)DELTA-analysis-result\.xml$'
+      pattern: &pattern '.*/([0-9]+-|)[0-9a-f]+-DELTA-analysis-result.xml$'
   - transform:
-      analysis-results-path: << parameters.analysis-results-path >>
       test-results-path: << parameters.test-results-path >>
-      pattern: '.*/([0-9]+-|)DELTA-analysis-result\.xml$'
+      pattern: *pattern
   - store_test_results:
       path: << parameters.test-results-path >>
   - comment:
-      analysis-results-path: << parameters.analysis-results-path >>
-      pattern: '.*/([0-9]+-|)DELTA-analysis-result\.xml$'
+      pattern: *pattern
       vcs-api-token: << parameters.vcs-api-token >>
   - save_comment-fingerprints
