--- a/src/commands/analyze-and-evaluate.yml
+++ b/src/commands/analyze-and-evaluate.yml
@@ -4,19 +4,11 @@ parameters:
     description: Check-out the BASE branch if true is specified
     type: boolean
     default: false
-  analysis-name:
-    description: Analysis name
-    type: string
-    default: "true"
   analyze:
     description: Specify analysis steps
     type: steps
     default:
       - analyze
-  analysis-results-path:
-    description: Specify the path to save the analysis results if you need to change it
-    type: string
-    default: "/tmp/analysis-results"
   test-results-path:
     description: Specify the value of the path parameter in the store_test_results step if you need to change it
     type: string
@@ -30,27 +22,31 @@ parameters:
     type: string
     default: ""
 steps:
-  - set-result-path:
-      analysis-name: << parameters.analysis-name >>
-      analysis-results-path: << parameters.analysis-results-path >>
-      is-target-branch-base: << parameters.is-target-branch-base >>
   - checkout-analysis-target:
       is-target-branch-base: << parameters.is-target-branch-base >>
-      vcs-api-token: << parameters.vcs-api-token >>
+  - declare-commit-ranges:
       circle_compare_url-path: << parameters.circle_compare_url-path >>
+      vcs-api-token: << parameters.vcs-api-token >>
+  - run:
+      name: declare -x DSCAR_ANALYSIS_TARGET
+      command: |
+        set -x
+        declare -x DSCAR_ANALYSIS_TARGET
+        if << parameters.is-target-branch-base >>
+        then DSCAR_ANALYSIS_TARGET=base
+        else DSCAR_ANALYSIS_TARGET=head
+        fi
+        echo "$(declare -p DSCAR_ANALYSIS_TARGET)" >> $BASH_ENV
   - steps: << parameters.analyze >>
   - when:
       condition: << parameters.test-results-path >>
       steps:
         - restore_comment-fingerprints
-        - evaluate:
-            analysis-results-path: << parameters.analysis-results-path >>
+        - evaluate
         - transform:
-            analysis-results-path: << parameters.analysis-results-path >>
             test-results-path: << parameters.test-results-path >>
         - store_test_results:
             path: << parameters.test-results-path >>
         - comment:
-            analysis-results-path: << parameters.analysis-results-path >>
             vcs-api-token: << parameters.vcs-api-token >>
         - save_comment-fingerprints
