--- a/src/commands/combine.yml
+++ b/src/commands/combine.yml
@@ -6,9 +6,9 @@ description: |
   [1]: https://www.npmjs.com/package/junit-reports-combiner
 parameters:
   analysis-results-path:
-    description: Specify the path to save the analysis results if you need to change it
+    description: "Specify the path to save the analysis results if you need to change it (default: /tmp/dscar/analysis-results)"
     type: string
-    default: "/tmp/analysis-results"
+    default: ""
   should-install-node_js:
     description: Specify true if the execution environment does not have Node.js installed
     type: boolean
@@ -27,12 +27,17 @@ steps:
       command: |
         set -x
 
-        find "${ANALYSIS_RESULTS_PATH:-/tmp/analysis-results}" -maxdepth 1 -mindepth 1 -type d |
+        COMMITS=( $( for SHA1 in $( echo ${DSCAR_COMMIT_RANGES[@]} | tr ' ' '\n' | tr -s '.' '\t' ) ; do echo $SHA1 ; done | sort | uniq ) )
+
+        ANALYSIS_RESULTS_PATH="${ANALYSIS_RESULTS_PATH:-${DSCAR_ANALYSIS_RESULTS_PATH:-/tmp/dscar/analysis-results}}"
+        mkdir -p "${ANALYSIS_RESULTS_PATH}"
+
+        find "${ANALYSIS_RESULTS_PATH}" -maxdepth 1 -mindepth 1 -type d |
         while read -r DIR
         do
           ANALYSIS_NAME="$(basename "$DIR")"
           mkdir -p "${DIR}/@"
-          for PREFIX in HEAD BASE
+          for PREFIX in ${COMMITS[@]}
           do
             RESULT_PATH="${DIR}/@/${CIRCLE_NODE_INDEX}-${PREFIX}-analysis-result.xml"
             find "$DIR" -type f -regextype posix-extended -regex ".*/[0-9]+/${PREFIX}-analysis-result\.xml" -print0 |
