--- a/src/commands/evaluate.yml
+++ b/src/commands/evaluate.yml
@@ -3,7 +3,7 @@ parameters:
   analysis-results-path:
     description: Specify the path to save the analysis results if you need to change it
     type: string
-    default: "/tmp/analysis-results"
+    default: ""
   pattern:
     description: Specify pattern to include by regular expression
     type: string
@@ -12,15 +12,16 @@ steps:
   - run:
       name: Evaluate analysis results
       environment:
-          ANALYSIS_RESULTS_PATH: << parameters.analysis-results-path >>
-          PATTERN: << parameters.pattern >>
-          SELECTOR: //exception|//error
+        ANALYSIS_RESULTS_PATH: << parameters.analysis-results-path >>
+        PATTERN: << parameters.pattern >>
+        SELECTOR: //exception|//error
       command: |
           set -x
 
           sudo apt-get install xmlstarlet
 
-          find "${ANALYSIS_RESULTS_PATH:-/tmp/analysis-results}" -type f -regextype posix-extended -regex "$PATTERN" |
+          ANALYSIS_RESULTS_PATH="${ANALYSIS_RESULTS_PATH:-${DSCAR_ANALYSIS_RESULTS_PATH:-/tmp/dscar/analysis-results}}"
+          find "${ANALYSIS_RESULTS_PATH}" -type f -regextype posix-extended -regex "$PATTERN" |
           while read -r RESULT_PATH
           do
             ! xmlstarlet sel -t -m "$SELECTOR" -v '.' -n < "$RESULT_PATH" >/dev/null || exit $?
