--- a/src/commands/set-analysis-result-paths.yml
+++ b/src/commands/set-analysis-result-paths.yml
@@ -6,9 +6,9 @@ description: |
   - DELTA_RESULT_PATH
 parameters:
   analysis-results-path:
-    description: Specify the path to save the analysis results if you need to change it
+    description: "Specify the path to save the analysis results if you need to change it (default: /tmp/dscar/analysis-results)"
     type: string
-    default: "/tmp/analysis-results"
+    default: ""
   has-aggregated:
     description: Specify true if analysis results are aggregated
     type: boolean
@@ -21,9 +21,11 @@ steps:
       command: |
           set -x
 
-          FIRST_PATHS=()
-          SECOND_PATHS=()
-          DELTA_PATHS=()
+          ANALYSIS_RESULTS_PATH="${ANALYSIS_RESULTS_PATH:-${DSCAR_ANALYSIS_RESULTS_PATH:-/tmp/dscar/analysis-results}}"
+
+          declare -ax FIRST_RESULT_PATH=()
+          declare -ax SECOND_RESULT_PATH=()
+          declare -ax DELTA_RESULT_PATH=()
           while read -r DIR
           do
             mkdir -p "${DIR}"
@@ -31,38 +33,38 @@ steps:
             then RESULT_FILENAME_PREFIX="${CIRCLE_NODE_INDEX}-"
             else RESULT_FILENAME_PREFIX=
             fi
-            FIRST_PATHS+=( "${DIR}/${RESULT_FILENAME_PREFIX}HEAD-analysis-result.xml" )
-            SECOND_PATHS+=( "${DIR}/${RESULT_FILENAME_PREFIX}BASE-analysis-result.xml" )
-            DELTA_PATHS+=( "${DIR}/${RESULT_FILENAME_PREFIX}DELTA-analysis-result.xml" )
+
+            for KEY in "${!DSCAR_COMMIT_RANGES[@]}"
+            do
+              COMMITS=( $(echo ${DSCAR_COMMIT_RANGES[$KEY]} | tr -s '.' '\t' ) )
+
+              BASE=${COMMITS[0]}
+              HEAD=${COMMITS[1]}
+              DELTA=$(echo -n "$KEY" | sha1sum | cut -d' ' -f1)
+
+              FIRST_RESULT_PATH+=( "${DIR}/${RESULT_FILENAME_PREFIX}${HEAD}-analysis-result.xml" )
+              SECOND_RESULT_PATH+=( "${DIR}/${RESULT_FILENAME_PREFIX}${BASE}-analysis-result.xml" )
+              DELTA_RESULT_PATH+=( "${DIR}/${RESULT_FILENAME_PREFIX}${DELTA}-DELTA-analysis-result.xml" )
+            done
           done < <(
             if << parameters.has-aggregated >>
             then
               NODE_TOTAL=$CIRCLE_NODE_TOTAL
               NODE_INDEX=$CIRCLE_NODE_INDEX
-              REGEX=".*/@/[0-9]+-(HEAD|BASE)-analysis-result\.xml"
+              REGEX=".*/@/[0-9]+-[0-9a-f]+-analysis-result\.xml"
             else
               NODE_TOTAL=1
               NODE_INDEX=0
-              REGEX=".*/${CIRCLE_NODE_INDEX}/(HEAD|BASE)-analysis-result\.xml"
+              REGEX=".*/${CIRCLE_NODE_INDEX}/[0-9a-f]+-analysis-result\.xml"
             fi
-            ANALYSIS_RESULTS_DIR="${ANALYSIS_RESULTS_PATH:-/tmp/analysis-results}"
-            find "${ANALYSIS_RESULTS_DIR}" -type f -regextype posix-extended -regex "$REGEX" |
+            ANALYSIS_RESULTS_PATH="${ANALYSIS_RESULTS_PATH:-${DSCAR_ANALYSIS_RESULTS_PATH:-/tmp/dscar/analysis-results}}"
+            find "${ANALYSIS_RESULTS_PATH}" -type f -regextype posix-extended -regex "$REGEX" |
             while read -r FILE ; do dirname "$FILE" ; done | sort | uniq |
             circleci tests split --show-counts --index=$NODE_INDEX --total=$NODE_TOTAL
           )
 
-          function tostring {
-            declare -n PATHS="$1"
-            echo "( "
-            for INDEX in $(seq 0 $(expr ${#PATHS[*]} - 1 ))
-            do
-              echo "'${PATHS[INDEX]}'"
-            done
-            echo " )"
-          }
-
           cat \<<-EOT >> $BASH_ENV
-          export FIRST_RESULT_PATH=$(tostring FIRST_PATHS)
-          export SECOND_RESULT_PATH=$(tostring SECOND_PATHS)
-          export DELTA_RESULT_PATH=$(tostring DELTA_PATHS)
+          $(declare -p FIRST_RESULT_PATH)
+          $(declare -p SECOND_RESULT_PATH)
+          $(declare -p DELTA_RESULT_PATH)
           EOT
