--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,39 @@ jobs:
             test ${#FIRST_RESULT_PATH[@]} -eq 1 -a "${FIRST_RESULT_PATH}" = "${DIR}/89abcdef-analysis-result.xml"
             test ${#SECOND_RESULT_PATH[@]} -eq 1 -a "${SECOND_RESULT_PATH}" = "${DIR}/01234567-analysis-result.xml"
             test ${#DELTA_RESULT_PATH[@]} -eq 1 -a "${DELTA_RESULT_PATH}" = "${DIR}/9c17e047f58f9220a7008d4f18152fee4d111d14-DELTA-analysis-result.xml"
+  integration-test-5:
+    executor:
+      <<: *dscar-default-executor
+    steps:
+      # test-case-1
+      - run:
+          name: setup
+          command: |
+            set -x
+            rm -f {HEAD,BASE,DELTA}-analysis-result.xml
+      - dscar/calculate
+      - run:
+          name: evaluate
+          command: |
+            set -x
+            test -e "DELTA-analysis-result.xml"
+            sudo apt-get install xmlstarlet
+            ! xmlstarlet sel -t -m '//error' -n >/dev/null < "DELTA-analysis-result.xml"
+      # test-case-2
+      - run:
+          name: setup
+          command: |
+            set -x
+            rm -f {HEAD,BASE,DELTA}-analysis-result.xml
+            echo '<checkstyle><file><error/></file></checkstyle>' > HEAD-analysis-result.xml
+      - dscar/calculate
+      - run:
+          name: evaluate
+          command: |
+            set -x
+            test -e "DELTA-analysis-result.xml"
+            sudo apt-get install xmlstarlet
+            xmlstarlet sel -t -m '//error' -n >/dev/null < "DELTA-analysis-result.xml"
 
 workflows:
   lint_pack-validate_publish-dev:
@@ -116,4 +149,5 @@ workflows:
       - integration-test-1
       - integration-test-3
       - integration-test-4
+      - integration-test-5
     when: << pipeline.parameters.run-integration-tests >>
